# robin_stocks

./: .env.template  CLAUDE.md  SETUP.md  pyproject.toml  setup.py  test_setup.py
examples/gemini examples/: basic_private_api_usage.py  basic_public_api_usage.py
examples/robinhood examples/: auto_retry_order.py  check_performance.py  close_option_position.py  deposit_funds_to_robinhood_account.py  get_accurate_gains.py  get_data_from_tags.py  get_option_historicals.py  place_vertical_spread.py  two_factor_log_in.py  withdrawl_funds_to_bank_account.py  write_options_to_file.py
examples/tda examples/: basic_authentication.py  place_order_and_cancel.py
examples/trading_bot_examples/: basic_trading_bot.py  crypto_arbitrage_bot.py
robin_stocks/: __init__.py
robin_stocks/gemini/: __init__.py  account.py  authentication.py  crypto.py  globals.py  helper.py  orders.py  urls.py
robin_stocks/robinhood/: __init__.py  account.py  authentication.py  crypto.py  export.py  globals.py  helper.py  markets.py  options.py  orders.py  stocks.py  urls.py
robin_stocks/tda/: __init__.py  accounts.py  authentication.py  globals.py  helper.py  markets.py  orders.py  stocks.py  urls.py
tests/: test_gemini.py  test_robinhood.py  test_tda.py  test_trading_bot.py  test_unit_mocks.py
